--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.16",
+    "redux": "^3.7.2",
+    "redux-promise": "^0.5.3",
     "socket.io-client": "^2.0.4"
   },
   "scripts": {
@@ -14,5 +17,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-devtools": "^2.5.2",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
