--- a/client/package.json
+++ b/client/package.json
@@ -22,5 +22,11 @@
     "react-devtools": "^2.5.2",
     "redux-devtools": "^3.4.0",
     "redux-devtools-extension": "^2.13.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
