--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "author": "dshire",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
     "express": "^4.16.2",
     "material-ui": "^0.19.4",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
