--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,17 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
+    "dev": "nodemon --exec node src/server.js",
     "test": "npm t"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "fs-extra": "^7.0.1",
+    "google-places-web": "^0.1.11",
+    "nodemon": "^1.18.10",
+    "uuid": "^3.3.2"
   }
 }
