--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
     "fs-extra": "^7.0.1",
     "google-places-web": "^0.1.11",
     "nodemon": "^1.18.10",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "node-geocoder": "^3.22.0",
+    "promise": "^8.0.3",
+    "request": "^2.88.0"
   }
 }
